adding a click me button and if two number match add a class List

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         7
     </div>
 
+    <div class=" ">
+        <button type="button" class="button">CLICK ME</button>
+    </div>
     <div class="messages">
         <h4 class="message"></h4>
     </div>
