--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +8,36 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="randomNumber.js">
-
     </script>
 
 </head>
+
 <body>
     <div class="text">
         <h4>REFRESH THE BROWSER TO GET RANDOM NUMBERS:</h4>
     </div>
+    <div class="color match ">
+        3
+    </div>
+
+    <div class="color match2">
+        5
+    </div>
+    <div class="color match3">
+        7
+    </div>
+
+    <div class="color match ">
+        3
+    </div>
+
+    <div class="color match2">
+        5
+    </div>
+    <div class="color match3">
+        7
+    </div>
+
     <div class="color match ">
         3
     </div>
@@ -34,4 +57,5 @@
     </div>
 
 </body>
+
 </html>
